--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">web designer <span>Yuki Wakabayashi</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/portfolio-profile2.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>京都府在住のWebデザイナー、若林佑希です。京都の老舗呉服店に勤務しながら、オンラインスクールでWeb制作について学んでいます。これからさらにWeb製作のスキルを身につけて、京友禅の美的センスを織り込んだ美しいWebサイトを作れるデザイナーになりたいと思っています。</p>
             </div>
         </header>
