--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                  <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -58,7 +58,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/business-card.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog-desigin.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/business-card.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
@@ -94,7 +94,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog-desigin.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -118,7 +118,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/blog-desigin.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -130,7 +130,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -142,7 +142,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/business-card.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
