--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Web Designer - Yuki Wakabayashi</title>
         <meta name="description" content="Webデザイナー 若林佑希のポートフォリオサイトです。京都を中心に活動しています。">
         <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./kadai-customize-portfolio/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     </head>
     <body>
